--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -41,15 +41,15 @@
                 {% if request.user.is_authenticated %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown"
-                       aria-haspopup="true" aria-expanded="false">{{ request.user.name }} <i
+                       aria-haspopup="true" aria-expanded="false">{{ request.user }} <i
                             class="icofont-thin-down"></i></a>
                     <ul class="dropdown-menu" aria-labelledby="dropdown03">
                         {% if request.user.is_doctor %}
-                        <li><a class="dropdown-item" href="#">
+                        <li><a class="dropdown-item" href="{% url 'patient-profile' request.user.id %}">
                             <i class="far fa-user"></i> Profile</a>
                         </li>
                         {% else %}
-                        <li><a class="dropdown-item" href="#">
+                        <li><a class="dropdown-item" href="{% url 'patient-profile' request.user.id %}">
                             <i class="fas fa-user"></i> Profile</a>
                         </li>
                         {% endif %}
@@ -68,9 +68,9 @@
                     <ul class="dropdown-menu" aria-labelledby="dropdown05">
                         <li><a class="dropdown-item" href="{%url 'login' %}">
                             <i class="fas fa-sign-in-alt"></i> Log In</a></li>
-                        <li><a class="dropdown-item" href="#">
-<!--                            <i class="fas fa-user-md"></i> Doctor Sign Up</a></li>-->
-                        <li><a class="dropdown-item" href="{%url 'signup'%}">
+<!--                        <li><a class="dropdown-item" href="#">-->
+                            <!--                            <i class="fas fa-user-md"></i> Doctor Sign Up</a></li>-->
+                        <li><a class="dropdown-item" href="{%url 'signup' %}">
                             <i class="fas fa-user-injured"></i> Patient Sign Up</a></li>
                     </ul>
                 </li>
