--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
                 <div class="col-lg-6">
                     <ul class="top-bar-info list-inline-item pl-0 mb-0">
                         <li class="list-inline-item"><a href="mailto:amic@gmail.com"><i
-                                class="icofont-support-faq mr-2"></i>amic@gmail.com</a></li>
+                                class="icofont-support-faq mr-2"></i>MediCare24x7@gmail.com</a></li>
                         <li class="list-inline-item">
                             <i class="icofont-location-pin mr-2"></i>Dhaka, Bangladesh
                         </li>
@@ -48,7 +48,7 @@
                     <div class="text-lg-right top-right-bar mt-2 mt-lg-0">
                         <a href="tel:+8801812345678">
                             <span>Call Now : </span>
-                            <span class="h4">+880 1812345678</span>
+                            <span class="h4">+880 ########</span>
                         </a>
                     </div>
                 </div>
