--- a/templates/accounts/Staff-dashboard.html
+++ b/templates/accounts/Staff-dashboard.html
@@ -4,8 +4,7 @@
 
 {% block content %}
 
-<section class="banner">
-    <div class="container">
+    <!-- <div class="container">
         <div class="row">
             <div class="col-lg-6 col-md-12 col-xl-7">
                 <div class="block">
@@ -18,7 +17,49 @@
                 </div>
             </div>
         </div>
+    </div> -->
+<!-- <div class="card-deck">
+    
+</div> -->
+
+
+
+
+
+<div class="container">
+    <div class="mt-5 text-center"><h3>Task Whats Staff can do</h3></div>
+    <div class="row mt-4 ">
+        
+        
+
+        <div class="col-lg-4 mb-3">
+            <div class="card" style="width: 20rem;">
+                <img class="card-img-top " src="{% static 'images/placeholders/addDoctoricon.png' %}" alt="Card image">
+                <div class="card-body">
+                  <h4 class="card-title">Add Doctor User</h4>
+                  <a href="#" class="btn btn-primary">Add a Doctor in server</a>
+                </div>
+            </div>   
+        </div>
+
+
+        <div class="col-lg-4 mb-3">
+            <div class="card" style="width: 20rem;">
+                <img class="card-img-top " src="{% static 'images/placeholders/ambulance-placeholder.jpg' %}" alt="Card image">
+                <div class="card-body">
+                  <h4 class="card-title">Add Ambulance</h4>
+                  <p class="card-text"></p>
+                  <a href="#" class="btn btn-primary">Add a Doctor in server</a>
+                </div>
+            </div>   
+        </div>
+
     </div>
-</section>
+        
+  
+    </div>
+
+
+
 
 {% endblock %}
