create just user: problem is it doesnt crt a DoctorModel

--- a/templates/accounts/add-doctor.html
+++ b/templates/accounts/add-doctor.html
@@ -6,7 +6,7 @@
 
 
 <section class="contact-form-wrap section">
-    <div class="container">
+    <div class="container" style="background: #9ce4b7">
         <div class="row justify-content-center">
             <div class="col-lg-6">
                 <div class="section-title text-center">
@@ -56,12 +56,7 @@
                         </div>
                     </div>
 
-                    <div>
-                        <input class="agree-term" id="agree-term" name="check" type="checkbox" required/>
-                        <span>
-                            I agree to all statements in <a class="term-service" href="#">Terms of service</a>
-                            </span>
-                    </div>
+                    
 
 
                     <div class="text-center">
