--- a/templates/accounts/Staff-dashboard.html
+++ b/templates/accounts/Staff-dashboard.html
@@ -37,7 +37,7 @@
                 <img class="card-img-top " src="{% static 'images/placeholders/addDoctoricon.png' %}" alt="Card image">
                 <div class="card-body">
                   <h4 class="card-title">Add Doctor User</h4>
-                  <a href="#" class="btn btn-primary">Add a Doctor in server</a>
+                  <a href="{%url 'add-doctor'%}" class="btn btn-primary">Add a Doctor in server</a>
                 </div>
             </div>   
         </div>
