--- a/templates/accounts/add-doctor.html
+++ b/templates/accounts/add-doctor.html
@@ -10,9 +10,9 @@
         <div class="row justify-content-center">
             <div class="col-lg-6">
                 <div class="section-title text-center">
-                    <h2 class="text-md mb-2">Sign Up as Doctor</h2>
                     <div class="divider mx-auto my-4"></div>
-                    <p class="mb-5">Be a Caregiver on our platform</p>
+                    <h2 class="text-md mb-2">Create Doctor User</h2>
+                    <div class="divider mx-auto my-4"></div>
                 </div>
             </div>
         </div>
@@ -61,7 +61,7 @@
 
                     <div class="text-center">
                         <button class="btn btn-main btn-round-full" type="submit">
-                            Sign Up <i class="button__icon fa fa-user-plus"></i>
+                            <i class="button__icon fa fa-user-plus">  Sign Up </i>
                         </button>
                     </div>
                 </form>
