--- a/templates/accounts/Staff-dashboard.html
+++ b/templates/accounts/Staff-dashboard.html
@@ -37,7 +37,7 @@
                 <div class="card-body">
                   <h4 class="card-title">Add Ambulance</h4>
                   <p class="card-text"></p>
-                  <a href="#" class="btn btn-primary">Add a Doctor in server</a>
+                  <a href="{% url 'add-ambulance'%}" class="btn btn-primary">Add Ambulance</a>
                 </div>
             </div>   
         </div>
