--- a/templates/accounts/add-doctor.html
+++ b/templates/accounts/add-doctor.html
@@ -61,7 +61,7 @@
 
                     <div class="text-center">
                         <button class="btn btn-main btn-round-full" type="submit">
-                            <i class="button__icon fa fa-user-plus">  Sign Up </i>
+                            <i class="button__icon fa fa-user-plus"> Add Doctor</i>
                         </button>
                     </div>
                 </form>
