appointment_doctorList_view

--- a/templates/accounts/patient-dashboard.html
+++ b/templates/accounts/patient-dashboard.html
@@ -16,7 +16,7 @@
                     <p class="mb-4 pr-5">A repudiandae ipsam labore ipsa voluptatum quidem quae laudantium quisquam
                         aperiam maiores sunt fugit, deserunt rem suscipit placeat.</p>
                     <div class="btn-container ">
-                        <a href="#" class="btn btn-main-2 btn-icon btn-round-full">
+                        <a href="{% url 'doctorList' %}" class="btn btn-main-2 btn-icon btn-round-full">
                             Make Appointment <i class="icofont-simple-right ml-2  "></i></a>
                     </div>
                 </div>
