--- a/templates/ambulance/ambulance-details.html
+++ b/templates/ambulance/ambulance-details.html
@@ -14,12 +14,23 @@
 						<h2>Ambulance Information</h2>
 					</div>
 				</div>
+
 			</div>
 			<div class="col-lg-3 col-md-12">
 			</div>
 			<div class="col-lg-3 col-md-12">
-			</div>
+			</div>		
 		</div>
+
+		<div class="col-lg-3 col-md-12">
+			{% if user.is_authenticated and user.is_staff%}
+			<a href="{% url 'edit-ambulance-details' ambulance.id %}"
+			class="btn btn-main btn-round-full text-center"><i
+					class="fa fa-plus"></i>
+				<span>EDIT AMBULANCE DETAILS</span>
+			</a>
+			{% endif %}
+		</div>	
 
 
 
