--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -37,7 +37,7 @@
                     <ul class="dropdown-menu" aria-labelledby="dropdown02">
                         <li><a class="dropdown-item" href="#">
                             <i class="icofont-blood-drop"></i> Blood Donation</a></li>
-                        <li><a class="dropdown-item" href="#">
+                        <li><a class="dropdown-item" href="{% url 'patient-available-abmulance' %}">
                             <i class="fas fa-hand-holding-medical"></i> Ambulnace Booking</a></li>
                     </ul>
                 </li>
