Ambulance edit page update version

--- a/templates/ambulance/add_ambulance.html
+++ b/templates/ambulance/add_ambulance.html
@@ -160,7 +160,7 @@
 
                     <div class="row">
                         <div class="col-lg-12">
-                            <div class="form-group">
+                            <div class="form-group" style="color: #000000">
                                 <label>Available  {{ form.available|add_class:"form-control" }}</label>
                                
                             </div>
